# AgonyAndPain

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
config/: settings.conf  settings.ini
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/: shader.frag  shader.vert
resources/shaders/: player.frag  player.vert  shader.frag  shader.vert  terrain.frag  terrain.vert
src/: main.cpp
src/Actors/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Player.cpp  Player.h
src/Components/: Body.cpp  Body.h  Movement.h  RenderData.h
src/Components/Buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Components/Shaders/: Shader.cpp  Shader.h
src/Core/: Game.cpp  Game.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
src/Engine/Components/: Body.cpp  Body.h  Movement.cpp  Movement.h
src/Engine/Rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/Engine/Rendering/Buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Engine/Rendering/Shaders/: Shader.cpp  Shader.h
src/Engine/Rendering/Textures/: Texture.cpp
src/Engine/Settings/: CameraSettings.h  GameSettings.h  RendererSettings.h  WindowSettings.h
src/Engine/System/: Window.cpp  Window.h
src/Engine/Utils/: ConfigParser.cpp  FrameTimer.cpp  Paths.h  Timer.cpp
src/Game/: Game.cpp  Game.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/Game/Entities/: Player.cpp  Player.h
src/Managers/: ConfigManager.cpp  ConfigManager.h  GameManager.cpp  GameManager.h
src/Rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/Rendering/Buffers/: VertexBuffer.h
src/Rendering/Shaders/: Shader.cpp
src/Settings/: CameraSettings.h  GameSettings.h  RendererSettings.h  WindowSettings.h
src/System/: Window.cpp  Window.h
src/Terrain/: Terrain.cpp  Terrain.h
src/Utils/: ConfigParser.h  FrameTimer.cpp  FrameTimer.h  Logger.cpp  Logger.h  Math.h  Paths.h  Settings.h  Timer.h  Utils.h
